# adk-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  autoformat.sh  llms-full.txt  llms.txt  pylintrc  pyproject.toml
.github/: release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-file-contents.yml  isort.yml  pr-commit-check.yml  pyink.yml  python-unit-tests.yml  triage.yml
contributing/: README.md  adk_project_overview_and_architecture.md
contributing/dev/utils/: build_llms_txt.py
contributing/samples/: README.md
contributing/samples/a2a_auth/: README.md  agent.py
contributing/samples/a2a_basic/: README.md  agent.py
contributing/samples/a2a_human_in_loop/: README.md  agent.py
contributing/samples/adk_issue_formatting_agent/: agent.py  settings.py  utils.py
contributing/samples/adk_triaging_agent/: README.md  agent.py  main.py  settings.py  utils.py
contributing/samples/application_integration_agent/: README.md  agent.py
contributing/samples/artifact_save_text/: agent.py
contributing/samples/bigquery/: README.md  agent.py
contributing/samples/bigquery_agent/: README.md  agent.py
contributing/samples/callbacks/: agent.py  main.py
contributing/samples/code_execution/: agent.py
contributing/samples/fields_output_schema/: agent.py
contributing/samples/fields_planner/: agent.py  asyncio_run.py  main.py
contributing/samples/generate_image/: agent.py
contributing/samples/google_api/: README.md  agent.py
contributing/samples/google_search_agent/: agent.py
contributing/samples/hello_world/: agent.py  asyncio_run.py  main.py
contributing/samples/hello_world_anthropic/: agent.py  main.py
contributing/samples/hello_world_litellm/: __init__.py  agent.py  asyncio_run.py  main.py
contributing/samples/hello_world_litellm_add_function_to_prompt/: agent.py  main.py
contributing/samples/hello_world_ma/: agent.py
contributing/samples/hello_world_ollama/: README.md  agent.py  asyncio_run.py  main.py
contributing/samples/human_in_loop/: README.md  agent.py  main.py
contributing/samples/integration_connector_euc_agent/: README.md  agent.py
contributing/samples/jira_agent/: README.md  agent.py  tools.py
contributing/samples/langchain_structured_tool_agent/: agent.py
contributing/samples/langchain_youtube_search_agent/: README.md  agent.py
contributing/samples/live_bidi_streaming_agent/: agent.py  readme.md
contributing/samples/live_bidi_streaming_multi_agent/: agent.py  readme.md
contributing/samples/live_bidi_streaming_tools_agent/: agent.py  readme.md
contributing/samples/mcp_agent/: agent.py
contributing/samples/mcp_sse_agent/: README.md  agent.py  filesystem_server.py
contributing/samples/mcp_stdio_notion_agent/: README.md  agent.py
contributing/samples/mcp_stdio_server_agent/: agent.py
contributing/samples/mcp_streamablehttp_agent/: README.md  agent.py  filesystem_server.py
contributing/samples/memory/: agent.py  asyncio_run.py  main.py
contributing/samples/non_llm_sequential/: agent.py
contributing/samples/oauth_calendar_agent/: README.md  agent.py
contributing/samples/quickstart/: agent.py
contributing/samples/rag_agent/: agent.py
contributing/samples/session_state_agent/: README.md  agent.py  input.json
contributing/samples/simple_sequential_agent/: agent.py
contributing/samples/telemetry/: agent.py  main.py
contributing/samples/token_usage/: agent.py  asyncio_run.py  main.py
contributing/samples/toolbox_agent/: README.md  agent.py  tool_box.db  tools.yaml
contributing/samples/workflow_agent_seq/: README.md  agent.py  main.py  sample.output
src/google/adk/: runners.py  telemetry.py  version.py
tests/integration/: .env.example  __init__.py  conftest.py  test_callback.py  test_evalute_agent_in_fixture.py  test_multi_agent.py  test_multi_turn.py  test_single_agent.py  test_sub_agent.py  test_tools.py  test_with_test_file.py
tests/integration/models/: test_google_llm.py  test_litellm_no_function.py  test_litellm_with_function.py
tests/integration/utils/: __init__.py  test_runner.py
tests/unittests/: conftest.py  test_runners.py  test_telemetry.py  testing_utils.py  utils.py
tests/unittests/agents/: test_agent_callbacks.py  test_base_agent.py  test_langgraph_agent.py  test_live_request_queue.py  test_llm_agent_callbacks.py  test_llm_agent_fields.py  test_llm_agent_include_contents.py  test_llm_agent_output_save.py  test_loop_agent.py  test_model_callback_chain.py  test_parallel_agent.py  test_readonly_context.py  test_remote_a2a_agent.py  test_run_config.py  test_sequential_agent.py
tests/unittests/artifacts/: test_artifact_service.py
tests/unittests/auth/: test_auth_config.py  test_auth_handler.py  test_credential_manager.py  test_oauth2_credential_fetcher.py  test_oauth2_credential_util.py  test_service_account_credential_exchanger.py
tests/unittests/cli/: test_fast_api.py
tests/unittests/code_executors/: test_built_in_code_executor.py  test_code_executor_context.py  test_unsafe_local_code_executor.py
tests/unittests/evaluation/: mock_gcs_utils.py  test_final_response_match_v1.py  test_gcs_eval_set_results_manager.py  test_gcs_eval_sets_manager.py  test_local_eval_set_results_manager.py  test_local_eval_sets_manager.py  test_metric_evaluator_registry.py  test_response_evaluator.py  test_safety_evaluator.py  test_trajectory_evaluator.py  test_vertex_ai_eval_facade.py
tests/unittests/fast_api/: test_fast_api.py
tests/unittests/models/: test_anthropic_llm.py  (+4 more)
(+410 files in other folders)
